gccida/c1/mark_reg_live_nc
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/mark_reg_live_nc/src/global.c:2052:36: error: must use 'enum' tag to refer to type 'machine_mode'
void  mark_reg_live_nc( int regno, machine_mode mode) 
                                   ^
                                   enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/mark_reg_live_nc/src/global.c:2062:25: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v3 = ( ( unsigned int)( mode_class_0[mode] - 5) < 2) + 1; 
                        ^~~~~~~~~~~~
                        mode_class
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/mark_reg_live_nc/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/mark_reg_live_nc/src/obj/global.o] Error 1
